monitoring/grafana-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: monitoring
  annotations:
    yandex.cloud/load-balancer-type: external
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
  - port: 80
    targetPort: 3000
